feat: useful mixins part 1 - overlay and rgba

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Caisse</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Create Web Design With Sass</title>
+    <link rel="stylesheet" href="css/homepage.css">
   </head>
   <body>
-    
+  <div class="product">
+    Product Name
+    <div class="overlay"></div>
+  </div>
   </body>
 </html>
