--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="utf-8">
     <title>Create Web Design With Sass</title>
     <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/vendor/normalize.css">
   </head>
   <body>
-  <div class="product">
-    Product Name
-    <div class="overlay"></div>
-  </div>
+    <!-- Start Header -->
+    <div class="header">
+      <div class="container">
+        <div class="logo">
+          <h1>Composition</h1>
+          <p>Free PSD Website Template</p>
+        </div>
+        <ul class="navbar">
+          <li>Homepage</li>
+          <li>Style Demo</li>
+          <li>Full Width</li>
+          <li>Dropdown</li>
+          <li>Link Text</li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Header -->
   </body>
 </html>
