--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           <p>Free PSD Website Template</p>
         </div>
         <ul class="navbar">
-          <li>Homepage</li>
-          <li>Style Demo</li>
-          <li>Full Width</li>
-          <li>Dropdown</li>
-          <li>Link Text</li>
+          <li><a class="active" href="#">Homepage</a></li>
+          <li><a href="#">Style Demo</a></li>
+          <li><a href="#">Full Width</a></li>
+          <li><a href="#">Dropdown</a></li>
+          <li><a href="#">Link Text</a></li>
         </ul>
       </div>
     </div>
