feat: create slider section

--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
       </div>
     </div>
     <!-- End Header -->
+
+    <!-- Start Slider -->
+    <div class="slider">
+      <div class="container">
+        <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi iste, porro voluptate itaque consectetur, vitae et saepe facilis quidem quas ducimus reiciendis at repudiandae aut impedit vero dolorum ipsum officia!"</blockquote>
+        <img src="images/slider.png" alt="">
+        <ul class="bullets">
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Slider -->
   </body>
 </html>
