feat: create headings components

--- a/index.html
+++ b/index.html
@@ -40,5 +40,16 @@
       </div>
     </div>
     <!-- End Slider -->
+
+    <!-- Start Services -->
+    <div class="services">
+      <div class="container">
+        <div class="head-with-border">
+          <h2>Our Services</h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, iste fuga praesentium libero ullam maiores voluptatem saepe modi enim deserunt odit, iusto perferendis consectetur sint repellendus dignissimos, hic distinctio rerum.</p>
+      </div>
+    </div>
+    <!-- End Services -->
   </body>
 </html>
