feat: create lorem ipsum section

--- a/index.html
+++ b/index.html
@@ -78,34 +78,54 @@
           <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
           <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
           <p class="player-desc">Lorem ipsum dolor sit amet, voluptatibus consectetur adipisicing elit. Fuga!</p>
-          <a href="#" class="player-link">Read More ...</a>
+          <a href="#" class="player-link">View Profile</a>
         </div>
         <div class="player-box">
           <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
           <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
           <p class="player-desc">Quod suscipit eos, perferendis voluptatibus earum harum ipsum numquam fugit.</p>
-          <a href="#" class="player-link">Read More ...</a>
+          <a href="#" class="player-link">View Profile</a>
         </div>
         <div class="player-box">
           <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
           <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
           <p class="player-desc">Ipsum quam tempore voluptatem maxime nemo, praesentium in iusto!</p>
-          <a href="#" class="player-link">Read More ...</a>
+          <a href="#" class="player-link">View Profile</a>
         </div>
         <div class="player-box">
           <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
           <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
           <p class="player-desc">Enim dolor accusantium ipsum quisquam commodi voluptatibus nam modi?</p>
-          <a href="#" class="player-link">Read More ...</a>
+          <a href="#" class="player-link">View Profile</a>
         </div>
         <div class="player-box">
           <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
           <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
           <p class="player-desc">A, quidem ab, repellat temporibus sapiente sit cupiditate sint.</p>
-          <a href="#" class="player-link">Read More ...</a>
+          <a href="#" class="player-link">View Profile</a>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+    <!-- End Our Players -->
+
+    <!-- Start Lorem Ipsum -->
+    <div class="lorem-ipsum">
+      <div class="container">
+        <div class="head-with-border">
+          <h2>Lorem Ipsum</h2>
+        </div>
+        <div class="lorem-box">
+          <img class="lorem-img" src="images/01.jpg" alt="">
+        </div>
+        <div class="lorem-box">
+          <img class="lorem-img" src="images/02.jpg" alt="">
+        </div>
+        <div class="lorem-box">
+          <img class="lorem-img" src="images/03.jpg" alt="">
         </div>
       </div>
     </div>
-    <!-- End Our Players -->
+    <!-- End Lorem Ipsum -->
   </body>
 </html>
