feat: create footer part 3

--- a/index.html
+++ b/index.html
@@ -152,25 +152,32 @@
         <div class="info">
           <h3 class="section-title">Company Details</h3>
           <ul>
+            <li>Company Name</li>
+            <li>Streat Name & Number</li>
+            <li>Town</li>
+            <li>Postcode/Zip</li>
             <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Tel: 000 987456123</li>
+            <li>Fax: 000 987456123</li>
+            <li>Email: <span class="email">contact@mydoman.com</span></li>
           </ul>
-          <h4 class="working">Working Hours</h4>
-          <p></p>
+          <h4 class="working">Office Hours</h4>
+          <p>Monday - Friday: 08:00 - 17:30</p>
+          <p>Saturday: 08:00 - 13:00</p>
         </div>
         <div class="contact">
           <h3 class="section-title">Contact Us</h3>
           <form action="">
-            <input type="text">
-            <input type="email">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            <textarea placeholder="Message"></textarea>
             <input class="main-button" type="submit" value="Submit">
           </form>
+        </div>
+        <div class="clearfix"></div>
+        <div class="copyright">
+          <div class="copyright-text">Copyright &copy; 2018 - All Rights Reserved - <a href="Ousalah.com">Ousalah</a></div>
+          <div class="copyright-author">Template by OS Templates</div>
         </div>
       </div>
     </div>
