feat: responsive - our services

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Create Web Design With Sass</title>
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="stylesheet" href="css/vendor/normalize.css">
@@ -53,17 +55,17 @@
         <div class="head-with-border">
           <h2>Our Services</h2>
         </div>
-        <div class="service-box">
+        <div class="service-box text-center-xs">
           <h3 class="service-title"><i class="fa fa-home"></i> Testing Title</h3>
           <p class="service-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis tempore sunt facilis error repellendus est nulla tempora quis. Quibusdam minima magnam dolore est incidunt, distinctio atque sequi saepe modi optio?</p>
           <a class="service-link" href="#">Read More ...</a>
         </div>
-        <div class="service-box">
+        <div class="service-box text-center-xs">
           <h3 class="service-title"><i class="fa fa-users"></i> Testing Title</h3>
           <p class="service-desc">Perferendis ipsum, quo placeat veniam, recusandae optio laudantium aspernatur eligendi illo deleniti aperiam reiciendis, maiores provident numquam. Accusantium cumque eum ut reiciendis dolores volupta oluta voluptatem?</p>
           <a class="service-link" href="#">Read More ...</a>
         </div>
-        <div class="service-box">
+        <div class="service-box text-center-xs">
           <h3 class="service-title"><i class="fa fa-gear"></i> Testing Title</h3>
           <p class="service-desc">Esse voluptatem, assumenda fugiat necessitatibus repudiandae natus amet numquam. Aliquam illo ipsa soluta eos provident amet labore sed nesciunt consequuntur, eveniet, eaque repellendus sunt animi? Blanditiis delectus laborum minima accusamus.</p>
           <a class="service-link" href="#">Read More ...</a>
