--- a/index.html
+++ b/index.html
@@ -81,35 +81,37 @@
         <div class="head-with-border">
           <h2>Our Players</h2>
         </div>
-        <div class="player-box">
-          <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
-          <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
-          <p class="player-desc">Lorem ipsum dolor sit amet, voluptatibus consectetur adipisicing elit. Fuga!</p>
-          <a href="#" class="player-link">View Profile</a>
-        </div>
-        <div class="player-box">
-          <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
-          <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
-          <p class="player-desc">Quod suscipit eos, perferendis voluptatibus earum harum ipsum numquam fugit.</p>
-          <a href="#" class="player-link">View Profile</a>
-        </div>
-        <div class="player-box">
-          <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
-          <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
-          <p class="player-desc">Ipsum quam tempore voluptatem maxime nemo, praesentium in iusto!</p>
-          <a href="#" class="player-link">View Profile</a>
-        </div>
-        <div class="player-box">
-          <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
-          <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
-          <p class="player-desc">Enim dolor accusantium ipsum quisquam commodi voluptatibus nam modi?</p>
-          <a href="#" class="player-link">View Profile</a>
-        </div>
-        <div class="player-box">
-          <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
-          <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
-          <p class="player-desc">A, quidem ab, repellat temporibus sapiente sit cupiditate sint.</p>
-          <a href="#" class="player-link">View Profile</a>
+        <div class="player-container">
+          <div class="player-box text-center-xs">
+            <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
+            <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
+            <p class="player-desc">Lorem ipsum dolor sit amet, voluptatibus consectetur adipisicing elit. Fuga!</p>
+            <a href="#" class="player-link">View Profile</a>
+          </div>
+          <div class="player-box text-center-xs">
+            <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
+            <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
+            <p class="player-desc">Quod suscipit eos, perferendis voluptatibus earum harum ipsum numquam fugit.</p>
+            <a href="#" class="player-link">View Profile</a>
+          </div>
+          <div class="player-box text-center-xs">
+            <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
+            <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
+            <p class="player-desc">Ipsum quam tempore voluptatem maxime nemo, praesentium in iusto!</p>
+            <a href="#" class="player-link">View Profile</a>
+          </div>
+          <div class="player-box text-center-xs">
+            <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
+            <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
+            <p class="player-desc">Enim dolor accusantium ipsum quisquam commodi voluptatibus nam modi?</p>
+            <a href="#" class="player-link">View Profile</a>
+          </div>
+          <div class="player-box text-center-xs">
+            <img class="player-img" src="http://placehold.it/300x200/ddd" alt="">
+            <h3 class="player-title"><span>Name: </span>Mohamed Ousalah</h3>
+            <p class="player-desc">A, quidem ab, repellat temporibus sapiente sit cupiditate sint.</p>
+            <a href="#" class="player-link">View Profile</a>
+          </div>
         </div>
       </div>
       <div class="clearfix"></div>
